--- a/CSS/main.css
+++ b/CSS/main.css
@@ -127,7 +127,7 @@ footer {
 
 header nav {
   margin-top: 100px;
-  background-color: #B8D9D5; }
+  background-color: #d9b8d7; }
   header nav a, header nav button, header nav i, header nav h3, header nav h5 {
     color: #327B74; }
   header nav #cart_count {
